--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 :root {
-  --c-dark: black;
+  --c-dark: blue;
   --c-light: yellow;
+  --c-none: rgba(0,0,0,0);
   --article-margin: calc(10vw - 2em);
   --article-max: 35em;
+
+  /* Traffic speed is randomized using javascript */
+  /* --traffic-speed: 10s; */
 }
 
 * {
@@ -15,6 +19,7 @@ body {
   font-family: system-ui, Helvetica, Arial, sans-serif;
   font-size: calc(16px + (24 - 16) * ((100vw - 320px) / (1600 - 320)));
   overflow-x: hidden;
+  padding-top: var(--article-margin);
 }
 
 li {
@@ -25,43 +30,297 @@ sup {
   color: purple;
 }
 
+.bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.bg::before {
+  content: "";
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to bottom, var(--c-dark) 0%, var(--c-none) 140%);
+  filter: hue-rotate(-55deg) brightness(150%);
+}
+
+.bg-city-skyline {
+  min-width: 1000px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.bg-city-traffic {
+  position: absolute;
+  bottom: 0;
+  left: 0vw;
+  /* height: 3vw; */
+  width: 100vw;
+  /* height: 100vh; */
+
+}
+
+[data-name="vehicle"]:nth-of-type(1) [data-name="vehicle-body"] {
+  fill: var(--c-dark);
+  filter: url("#car-blue");
+}
+
+[data-name="vehicle"]:nth-of-type(2) [data-name="vehicle-body"] {
+  fill: var(--c-dark);
+  filter: url("#car-red");
+}
+
+[data-name="vehicle"]:nth-of-type(3) [data-name="vehicle-body"] {
+  fill: var(--c-light);
+  filter: url("#car-yellow");
+}
+
+[data-name="vehicle-wheels"] circle {
+  fill: var(--c-dark);
+  filter: url("#gray-dark")
+}
+
+#traffic-to-left {
+  transform: translateX(10%);
+}
+
+#traffic-to-left [data-name="vehicle"] {
+  animation-name: trafficToLeft;
+}
+
+#traffic-to-right {
+  transform: translateX(-10%);
+}
+
+#traffic-to-right [data-name="vehicle"] {
+  animation-name: trafficToRight;
+
+}
+
+[data-name="vehicle"] {
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: var(--traffic-speed);
+  animation-delay: var(--traffic-delay);
+}
+
+[data-name="vehicle"]:hover {
+  animation-play-state: paused;
+}
+
+/* [data-name="vehicle"]:nth-of-type(1) {
+  animation-delay: 0s;
+  animation-duration: calc(var(--traffic-speed) * 1.2);
+}
+
+[data-name="vehicle"]:nth-of-type(2) {
+  animation-delay: -5s;
+  animation-duration: calc(var(--traffic-speed) * 1.4);
+}
+
+[data-name="vehicle"]:nth-of-type(3) {
+  animation-delay: -10s;
+  animation-duration: calc(var(--traffic-speed) * .8);
+} */
+
+@keyframes trafficToLeft {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-110%)
+  }
+}
+
+@keyframes trafficToRight {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(110%)
+  }
+}
+
+
+.iframe-bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+
+#city-skyline [data-name="skyscraper"]:hover [data-name="windows"] rect, #bat-signal:hover {
+  animation: partyHardy 1s alternate infinite linear;
+  fill: var(--c-dark);
+}
+
+#city-skyline [data-name="skyscraper"]:hover [data-name="windows"] rect:nth-child(3n) {
+  animation-delay: -.5s;
+}
+
+#city-skyline [data-name="skyscraper"]:hover [data-name="windows"] rect:nth-child(3n + 1) {
+  animation-delay: -1s;
+}
+
+@keyframes partyHardy {
+  0% {
+    filter: url("#red-lights");
+  }
+  50% {
+    filter: url("#blue-lights");
+  }
+  74% {
+    fill: var(--c-dark);
+    filter: url("#blue-lights");
+  }
+  75% {
+    filter: url("#green-lights");
+    fill: var(--c-light)
+  }
+  100% {
+    fill: var(--c-light);
+    filter: url("#green-lights");
+  }
+}
+
+#city-skyline [data-name="windows"] rect {
+  fill: var(--c-dark);
+  filter: url("#greyer")
+}
+
+#city-trees [data-name="tree-wood"] {
+  fill: var(--c-dark);
+  filter: url("#tree-brown");
+}
+
+#city-trees [data-name="tree-leaves"] {
+  fill: var(--c-dark);
+  filter: url("#leaf-green");
+}
+
+#city-3 [data-name="building"] {
+  fill: var(--c-dark);
+  filter: url("#gray-dark")
+}
+
+#city-2 [data-name="building"] {
+  fill: var(--c-dark);
+  filter: url("#gray-medium")
+}
+
+#city-1 [data-name="building"] {
+  fill: var(--c-dark);
+  filter: url("#gray-light")
+}
+
+#bat-signal {
+  fill: var(--c-light);
+  opacity: .6;
+  transform: translateX(100px);
+
+}
+
 .l-article {
   width: 100vw;
   padding: 0 var(--article-margin);
 }
 
-.l-article > .l-article-part {
+.l-article > .l-article-part:not(.footnotes) {
   max-width: var(--article-max);
   margin-bottom: 2em;
   display: flex;
   flex-wrap: wrap;
   box-sizing: content-box;
-  background: var(--c-light);
-  filter: hue-rotate(300deg);
-  outline: solid 10px var(--c-light);
-}
-
-.l-article > .l-article-part .title:first-of-type ~ .title {
-  margin-top: .5em;
   position: relative;
+  background: none;
 }
 
-.l-article > .l-article-part .title:first-of-type ~ .title::before {
+.l-article > .l-article-part::before {
   content: '';
   display: block;
-  height: 5px;
-  width: 25%;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  top: -2.5px;
-  left: .5rem;
   background: var(--c-light);
-  filter: hue-rotate(-160deg);
+  outline: solid 10px var(--c-light);
+  filter: grayscale(100%) contrast(500%) brightness(3000%);
+  opacity: .75;
+  z-index: 0;
+}
+
+.layout > * {
+  z-index: 1;
+}
+
+.fig {
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 2;
+}
+.fig .fig-img-container {
+  flex-grow: 1;
+  flex-basis: 50%;
+  min-width: 400px;
+}
+
+.fig figcaption {
+  flex-grow: 1;
+  flex-basis: 40%;
+}
+
+.fig .fig-img-container img {
+  width: 100%;
+}
+
+.title {
+  color: var(--c-dark);
+  filter: hue-rotate(300deg) brightness(150%);
+}
+
+.title:first-of-type ~ .title {
+  margin-top: .5em;
+  position: relative;
+  /* color: var(--c-dark);
+  filter: hue-rotate(300deg) brightness(150%); */
+
+  /* color: inherit; */
+  /* filter: grayscale(50%); */
+  /* opacity: .8 */
+  /* filter: hue-rotate(303deg) brightness(300%); */
+}
+
+.l-article-part .title::before {
+  content: '';
+  display: block;
+  height: 7px;
+  width: calc(100% - 1rem);
+  position: absolute;
+  /* bottom: -2.5px; */
+  bottom: 0;
+  left: .5rem;
+  /* background: var(--c-dark); */
+  background: linear-gradient(to right, var(--c-dark) 0%,var(--c-light) 100%);
+  z-index: -1;
+  /* filter: hue-rotate(70deg) brightness(20%); */
+  /* opacity: .2; */
 }
 
 .l-article > .l-article-part p {
   flex-grow: 1;
   flex-basis: 50%;
   min-width: 300px;
+  color: var(--c-dark);
+  font-weight: 500;
+  filter: grayscale(100%);
+  opacity: .8;
 }
 
 .l-article > .l-article-part > * {
@@ -80,7 +339,30 @@ sup {
   min-width: 100vw;
   margin-left: calc(var(--article-margin) * -1);
   padding: 0 calc((100vw - var(--article-max)) / 2);
-  background: grey;
+  position: relative;
+  color: var(--c-light);
+}
+
+.l-article .footnotes .title::before {
+  left: 0;
+}
+.l-article .footnotes::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  background: var(--c-dark);
+  outline: solid 10px var(--c-dark);
+  filter: grayscale(100%) contrast(500%) brightness(3000%);
+  opacity: .75;
+  z-index: -1;
+}
+
+
+.l-article .footnotes ol {
+  filter: grayscale(100%)
 }
 
 .l-article .footnotes ol li {
@@ -134,6 +416,7 @@ sup {
 
 .l-footer > .l-footer-part:last-of-type ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
+  max-width: var(--article-max);
 }
